--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,7 +2,7 @@ name: Automated Commit
 
 on:
   push:
-    branches: [master] # Ensures the workflow triggers on pushes to master
+    branches: [main] # Ensures the workflow triggers on pushes to master
 
   schedule:
     - cron: '0 */8 * * *' # Executes every 8 hours
